--- a/extras_src/manual/StdLibMan2_03.adoc
+++ b/extras_src/manual/StdLibMan2_03.adoc
@@ -77,44 +77,46 @@ END THE.
 == The two methods for examining things
 
 The library provides two ways for examining things.
-The first one is the traditional "VERB examine DOES (ONLY)...":
+The first one is the traditional `VERB examine DOES ONLY`:
 
-// @EXTERN CODE: ball_garden
+
+.Example: Custom examine response via `VERB DOES ONLY` (from {garden1_alan})
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------
 include::{utf8dir}/garden1.alan[tag=ball_garden]
---------------------------------------------------------------------------------
+------------------------------------------------
 
 
 which will yield
 
-// @EXTERN TRANSCRIPT: ball_garden
+
 [example,role="gametranscript"]
-================================================================================
+=====================================================
 include::{utf8dir}/garden1.a3ADocLog[tag=ball_garden]
-================================================================================
+=====================================================
 
 
+In the example above, it was necessary to use `DOES ONLY`; if we had used `DOES` instead, the default library response for all things would be shown before the custom reponse: [.play]#You notice nothing unusual about the ball. It's a small red ball.#
 
-Above, you would have to use DOES ONLY, because if you use only DOES, the library-defined response for all things would show first: "You notice nothing unusual about the ball. It's a small red ball."
 
 Another way for examining things is to use the `ex` attribute.
-`Ex` is here short for "examine":
+`Ex` is here short for "`examine`":
 
-// @EXTERN CODE: ball_garden (variation)
+
+.Example: Custom examine response via the `ex` attribute (from {garden2_alan})
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------
 include::{utf8dir}/garden2.alan[tag=ball_garden]
---------------------------------------------------------------------------------
+------------------------------------------------
 
 
 which will yield the same response as the first method:
 
-// @EXTERN TRANSCRIPT: ball_garden (variation)
+
 [example,role="gametranscript"]
-================================================================================
+=====================================================
 include::{utf8dir}/garden2.a3ADocLog[tag=ball_garden]
-================================================================================
+=====================================================
 
 
 but you notice how the needed formulation is shorter.
